--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
+
+
+html, body, #__next {
+  width: 100%;
+  height: 100%;
+}
+
+nav ul{
+  display: flex;
+}
+
+nav ul li a {
+  padding: 10px;
+}
+
+header, 
+footer {
+  padding: 2rem;
+  display: grid;
+  place-items: center;
+}
+
+.heading {
+  display: grid;
+  place-items: center;
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.page-wrapper {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+}
+
 @tailwind utilities;
