--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,12 +57,20 @@ html, body, #__next {
   font-family: Gilroy;
 }
 
-nav ul{
+nav ul {
+  font-size: 1.3rem;
   display: flex;
+  font-weight: 600;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 nav ul li a {
   padding: 10px;
+}
+
+nav ul li {
+  margin: 10px;
 }
 
 header, 
