--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,11 +50,23 @@
   font-style: normal;
   font-weight: 900;
 }
+@font-face {
+  font-family: "Recoleta";
+  src: url("../public/fonts/RecoletaMedium/font.woff2") format("woff2"),
+    url("../public/fonts/RecoletaMedium/font.woff") format("woff");
+  font-style: normal;
+  font-weight: 500;
+}
 
 html, body, #__next {
   width: 100%;
   height: 100%;
   font-family: Gilroy;
+}
+
+body {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 nav ul {
@@ -80,21 +92,28 @@ footer {
   place-items: center;
 }
 
+footer {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .landing {
-  height: calc(100vh - 88px);
+  height: calc(100vh - 115px);
 }
 
 .heading {
   display: grid;
   place-items: center;
-  font-size: 4.5rem;
-  line-height: 1;
   text-align: center;
+  
 }
 
 .heading h1 {
   font-family: Recoleta;
+  font-weight: 900;
   padding-bottom: 1rem;
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .main-subheading {
@@ -103,6 +122,7 @@ footer {
   font-weight: 500;
   letter-spacing: 0.025em;
   color: #8f8f8f;
+  max-width: 568px;
 }
 
 .page-wrapper {
@@ -111,5 +131,32 @@ footer {
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 100%;
 }
+
+section p {
+  padding-bottom: 2rem;
+}
+
+section {
+  text-align: left;
+}
+
+.about h1 {
+  padding-bottom: 4rem;
+  padding-top: 8rem;
+}
+
+/* footer {
+  padding-top: 8vmax;
+  padding-bottom: 8vmax;
+}
+
+footer p {
+  max-width: 568px;
+  padding: 1rem 1rem 2rem 1rem;
+  font-size: 1.6rem;
+  text-align: center;
+  font-family: 'Recoleta';
+  font-weight: 500;
+} */
 
 @tailwind utilities;
