--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,7 +101,7 @@ footer {
   height: calc(100vh - 115px);
 }
 
-.heading {
+.heading, img {
   display: grid;
   place-items: center;
   text-align: center;
@@ -123,6 +123,7 @@ footer {
   letter-spacing: 0.025em;
   color: #8f8f8f;
   max-width: 568px;
+  padding-bottom: 8rem;
 }
 
 .page-wrapper {
@@ -148,6 +149,16 @@ section {
 .resource-section-heading h3 {
   font-weight: bold;
   color: #03cffe;
+}
+
+.hero-image-wrapper {
+  display: grid;
+  place-items: center;
+  padding-bottom: 4rem;
+}
+
+.hero-image-wrapper img {
+  border: solid 10px;
 }
 /* footer {
   padding-top: 8vmax;
