--- a/styles/globals.css
+++ b/styles/globals.css
@@ -242,11 +242,12 @@ nav .burger .burger-lines:before {
   left: 20px;
   bottom: 100px;
   width: 75%;
-  height: 75%;
+  height: 70%;
   z-index: 1002;
   flex-direction: column;
   display: flex;
   font-size: 3rem;
+  flex-flow: column;
   transition: opacity 500ms ease 0s;
 }
 
