--- a/styles/globals.css
+++ b/styles/globals.css
@@ -217,7 +217,7 @@ nav .burger .burger-lines:before {
   background-color: rgb(17, 24, 39); /* Black fallback color */
   background-color: rgba(17, 24, 39, 0.9); /* Black w/opacity */
   overflow-x: hidden; /* Disable horizontal scroll */
-  transition: opacity 500ms ease 0s;
+  /* transition: opacity 500ms ease 0s; */
 }
 
 .overlay {
@@ -232,7 +232,7 @@ nav .burger .burger-lines:before {
   background-color: rgb(255, 255, 255); /* Black fallback color */
   background-color: rgba(255, 255, 255, 0.9); /* Black w/opacity */
   overflow-x: hidden; /* Disable horizontal scroll */
-  transition: opacity 500ms ease 0s;
+  /* transition: opacity 500ms ease 0s; */
 }
 
 
@@ -248,7 +248,7 @@ nav .burger .burger-lines:before {
   display: flex;
   font-size: 3rem;
   flex-flow: column;
-  transition: opacity 500ms ease 0s;
+  /* transition: opacity 500ms ease 0s; */
 }
 
 @media (min-width: 640px) {
