--- a/styles/globals.css
+++ b/styles/globals.css
@@ -182,6 +182,8 @@ nav ul {
 .navigation-wrapper {
   justify-content: center;
   padding-top: 1rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
 }
 
 .burger-nav-wrapper {
