add desk image to "uses" page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -299,4 +299,15 @@ nav .burger .burger-lines:before {
   }
 }
 
+.desk-image {
+  width: 800px;
+  height: auto;
+}
+
+.desk-image-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @tailwind utilities;
