--- a/styles/globals.css
+++ b/styles/globals.css
@@ -166,8 +166,8 @@ section {
 .hero-image {
   border: solid 10px;
   z-index: 200;
-  width: 240px;
-  height: 240px;
+  width: 180px;
+  height: 180px;
   border-radius: 9999px;
 }
 
@@ -275,6 +275,11 @@ nav .burger .burger-lines:before {
   .uses-wrapper ul,
   .grid-container ul {
     font-size: 1.2rem;
+  }
+
+  .hero-image {
+    width: 240px;
+    height: 240px;
   }
 
   .hero-image-wrapper {
