--- a/styles/globals.css
+++ b/styles/globals.css
@@ -337,6 +337,7 @@ nav .burger .burger-lines:before {
 .uses-wrapper ul {
   list-style-type: disc;
   margin-left: 1rem;
+  font-weight: 500;
   
 }
 
