change burger menu color to #1d1d1f

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -215,7 +215,7 @@ nav ul {
 nav .burger .burger-lines,
 nav .burger .burger-lines:after,
 nav .burger .burger-lines:before {
-  background-color: #3e3f3f;
+  background-color: #1d1d1f;
 }
 
 .dark .overlay {
