--- a/styles/globals.css
+++ b/styles/globals.css
@@ -167,8 +167,8 @@ section {
 .hero-image-wrapper {
   display: grid;
   place-items: center;
-  padding-bottom: 3rem;
-  padding-top: 2rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 .hero-image {
@@ -317,6 +317,11 @@ nav .burger .burger-lines:before {
 
 /* Media query start */
 @media (min-width: 640px) {
+
+  .hero-image-wrapper {
+    padding-bottom: 3rem;
+    padding-top: 0rem;
+  }
 
   .uses-wrapper ul,
   .grid-container ul {
