--- a/styles/globals.css
+++ b/styles/globals.css
@@ -495,12 +495,21 @@ html.dark .short-story-long-button {
 @media (max-width: 530px) {
   .long-story-short-button,
   .short-story-long-button {
-
     padding: 0.25rem 1rem;
     font-size: 1rem;
-
   }
+}
 
+
+.highlight {
+  background-color: #6303FE;
+  color: white;
+  padding: 0 0.25rem;
+}
+
+html.dark em.highlight{
+  background-color: #03CFFE;
+  color:#111827;
 }
 
 @tailwind utilities;
