--- a/styles/globals.css
+++ b/styles/globals.css
@@ -130,13 +130,18 @@ img {
   max-width: 300px;
   /* padding-bottom: 8rem; */
   margin-bottom: 8rem;;
-  background-image: linear-gradient(135deg, #6303FE 25%, #03CFFE);
+  background-image: linear-gradient(135deg, #6303FE, #03CFFE);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
   font-weight: 600;
   margin: 0 auto;
+}
+
+html.dark .main-subheading,
+html.dark .hero-image {
+  background-image: linear-gradient(320deg,#03fecf,#03cffe 50%)
 }
 
 .page-wrapper {
@@ -184,7 +189,7 @@ section {
   width: 200px;
   height: 200px;
   border-radius: 9999px;
-  background-image: linear-gradient(135deg, #6303FE 25%, #03CFFE);
+  background-image: linear-gradient(135deg, #6303FE, #03CFFE);
 }
 
 .tech-stack-icons {
