--- a/styles/globals.css
+++ b/styles/globals.css
@@ -197,6 +197,7 @@ section {
   0 14.5px 17.9px rgba(0, 0, 0, 0.042),
   0 27.2px 33.4px rgba(0, 0, 0, 0.05),
   0 65px 80px rgba(0, 0, 0, 0.07);
+  overflow: hidden;
 }
 
 .tech-stack-icons {
@@ -534,5 +535,8 @@ html.dark a.active-link {
   border-bottom:3px solid #03CFFE;
   /* color: #03CFFE; */
 }
+
+.grow { transition: all .4s ease-in-out; }
+.grow:hover { transform: scale(0.95); }
 
 @tailwind utilities;
