--- a/styles/globals.css
+++ b/styles/globals.css
@@ -317,10 +317,10 @@ nav .burger .burger-lines:before {
   padding-top: 4rem;
 }
 
-.layout-wrapper {
+/* .layout-wrapper {
   max-width: 720px;
   margin: 0px auto;
-}
+} */
 
 .uses-wrapper ul {
   list-style-type: disc;
@@ -337,11 +337,16 @@ nav .burger .burger-lines:before {
   margin-bottom: 2rem;
 }
 
+.about p {
+  font-size: 1.1875rem;
+  line-height: 1.75rem;
+}
+
 /* Media query start */
 @media (min-width: 640px) {
 
   .about-me-text {
-    padding: 0 20px;
+    /* padding: 0 20px; */
   }
 
   .landing h1 {
@@ -534,6 +539,17 @@ a.active-link {
 html.dark a.active-link {
   border-bottom:3px solid #03CFFE;
   /* color: #03CFFE; */
+}
+
+.grid-wrapper {
+  display: grid;
+  grid-template-columns:
+    1fr
+    min(65ch, 100%)
+    1fr;
+}
+.grid-wrapper > * {
+  grid-column: 2;
 }
 
 /* .grow { transition: all .4s ease-in-out; }
