--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,7 +93,7 @@ nav ul li,
 }
 
 footer {
-  padding: 10rem 0rem 2rem;
+  padding: 64px 0px 32px;
   display: grid;
   place-items: center;
 }
@@ -129,8 +129,8 @@ img {
   color: #8f8f8f;
   max-width: 300px;
   /* padding-bottom: 8rem; */
-  margin-bottom: 8rem;;
-  background-image: linear-gradient(135deg, #6303FE 25%, #03CFFE);
+  margin-bottom: 8rem;
+  background-image: linear-gradient(135deg, #6303fe 25%, #03cffe);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
@@ -141,7 +141,7 @@ img {
 
 html.dark .main-subheading,
 html.dark .hero-image {
-  background-image: linear-gradient(320deg,#03fecf,#03cffe 50%)
+  background-image: linear-gradient(320deg, #03fecf, #03cffe 50%);
 }
 
 .page-wrapper {
@@ -189,14 +189,11 @@ section {
   width: 200px;
   height: 200px;
   border-radius: 9999px;
-  background-image: linear-gradient(135deg, #6303FE 25%, #03CFFE);
-  box-shadow:
-  0 1.8px 2.2px rgba(0, 0, 0, 0.02),
-  0 4.3px 5.3px rgba(0, 0, 0, 0.028),
-  0 8.1px 10px rgba(0, 0, 0, 0.035),
-  0 14.5px 17.9px rgba(0, 0, 0, 0.042),
-  0 27.2px 33.4px rgba(0, 0, 0, 0.05),
-  0 65px 80px rgba(0, 0, 0, 0.07);
+  background-image: linear-gradient(135deg, #6303fe 25%, #03cffe);
+  box-shadow: 0 1.8px 2.2px rgba(0, 0, 0, 0.02),
+    0 4.3px 5.3px rgba(0, 0, 0, 0.028), 0 8.1px 10px rgba(0, 0, 0, 0.035),
+    0 14.5px 17.9px rgba(0, 0, 0, 0.042), 0 27.2px 33.4px rgba(0, 0, 0, 0.05),
+    0 65px 80px rgba(0, 0, 0, 0.07);
   overflow: hidden;
 }
 
@@ -304,7 +301,8 @@ nav .burger .burger-lines:before {
   height: auto;
 }
 
-.topo-image-wrapper, .desk-image-wrapper {
+.topo-image-wrapper,
+.desk-image-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -320,7 +318,6 @@ nav .burger .burger-lines:before {
   list-style-type: disc;
   margin-left: 1rem;
   font-weight: 500;
-  
 }
 
 .grid-container ul {
@@ -337,13 +334,12 @@ nav .burger .burger-lines:before {
 }
 
 .uses-wrapper ul,
-  .grid-container ul {
-    font-size: 1.2rem;
-  }
+.grid-container ul {
+  font-size: 1.2rem;
+}
 
 /* Media query start */
 @media (min-width: 640px) {
-
   .landing h1 {
     font-size: 4.5rem;
   }
@@ -351,7 +347,6 @@ nav .burger .burger-lines:before {
   .hero-image-wrapper {
     padding-bottom: 3rem;
   }
-
 
   .main-subheading {
     max-width: 470px;
@@ -403,30 +398,30 @@ nav .burger .burger-lines:before {
 
 /* Form CSS START */
 .formkit-submit {
-  background: #6303FE;
+  background: #6303fe;
   padding: 0.5rem 1rem;
   border-radius: 0px 15px 15px 0px;
   font-weight: bold;
-  border: solid 5px #6303FE;
+  border: solid 5px #6303fe;
   margin-left: -0.25rem;
   letter-spacing: 0.5px;
   color: white;
   transition: background 300ms ease 0s;
 }
 
-html.dark .formkit-submit  {
+html.dark .formkit-submit {
   background: #03cffe;
   border: solid 5px #03cffe;
   color: #111827;
 }
 
-html.dark .formkit-input  {
+html.dark .formkit-input {
   border: solid 5px #03cffe;
   color: white;
 }
 
 .formkit-submit:hover {
-  background: #6303FE;
+  background: #6303fe;
 }
 
 .formkit-input {
@@ -435,7 +430,7 @@ html.dark .formkit-input  {
   border-radius: 15px 0px 0px 15px;
   letter-spacing: 0.5px;
   background-color: transparent;
-  border: solid 5px #6303FE;
+  border: solid 5px #6303fe;
   font-weight: 500;
 }
 
@@ -443,7 +438,7 @@ html.dark .formkit-input  {
   display: flex;
 }
 
-.embeddable-buttondown-form{
+.embeddable-buttondown-form {
   margin-bottom: 3rem;
 }
 
@@ -452,9 +447,16 @@ html.dark .formkit-input  {
 }
 /* Form CSS END */
 
-.email-form-text  {
+.email-form-text {
+  text-align: center;
+  max-width: 320px;
+  height: 100px;
   font-size: 1.6rem;
   font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-bottom: 20px;
 }
 
 .long-story-short-button {
@@ -465,6 +467,7 @@ html.dark .formkit-input  {
   border-radius: 0px 15px 15px 0px;
   border: solid 6px #6303fe;
   color: #6303fe;
+  margin-bottom: 20px;
 }
 
 .short-story-long-button {
@@ -483,12 +486,10 @@ html.dark .formkit-input  {
 }
 
 html.dark button.story-button-active.long-story-short-button,
-html.dark button.story-button-active.short-story-long-button
- {
+html.dark button.story-button-active.short-story-long-button {
   background: #03cffe;
   color: #111827;
 }
-
 
 html.dark .long-story-short-button,
 html.dark .short-story-long-button {
@@ -512,25 +513,24 @@ html.dark .short-story-long-button {
   }
 }
 
-
 .highlight {
-  background-color: #6303FE;
+  background-color: #6303fe;
   color: white;
   padding: 0 0.25rem;
 }
 
-html.dark em.highlight{
-  background-color: #03CFFE;
-  color:#111827;
+html.dark em.highlight {
+  background-color: #03cffe;
+  color: #111827;
 }
 
 a.active-link {
-  border-bottom:3px solid #6303FE;
+  border-bottom: 3px solid #6303fe;
   /* color: #6303FE; */
 }
 
 html.dark a.active-link {
-  border-bottom:3px solid #03CFFE;
+  border-bottom: 3px solid #03cffe;
   /* color: #03CFFE; */
 }
 
