--- a/styles/globals.css
+++ b/styles/globals.css
@@ -449,9 +449,9 @@ html.dark .formkit-input {
 
 .email-form-text {
   text-align: center;
-  max-width: 320px;
+  width: 320px;
   height: 100px;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 500;
   display: flex;
   flex-direction: column;
