--- a/styles/globals.css
+++ b/styles/globals.css
@@ -449,7 +449,7 @@ html.dark .formkit-input {
 
 .email-form-text {
   text-align: center;
-  width: 320px;
+  /* width: 320px; */
   height: 100px;
   font-size: 1.5rem;
   font-weight: 500;
