--- a/styles/globals.css
+++ b/styles/globals.css
@@ -448,7 +448,7 @@ html.dark .formkit-input {
 /* Form CSS END */
 
 .email-form-text {
-  text-align: center;
+  /* text-align: center; */
   /* width: 320px; */
   height: 100px;
   font-size: 1.5rem;
@@ -457,6 +457,13 @@ html.dark .formkit-input {
   flex-direction: column;
   justify-content: flex-end;
   margin-bottom: 20px;
+}
+
+.newsletter-signup-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: max-content;
+  text-align: center;
 }
 
 .long-story-short-button {
